# ProyectoMateo

./: CMakeLists.txt  README.md  main.cpp
Clases/: Casilla.cpp  Casilla.h  Dado.cpp  Dado.h  Jugador.cpp  Jugador.h  Partida.cpp  Partida.h  Tablero.cpp  Tablero.h  Utilidades.cpp  Utilidades.h
partidas/: test.txt
